java-operator/src/test/resources/com/enonic/kubernetes/operator/ingress/configMap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: extra-config
  namespace: mycloud-mysolution-myenv-myservice
data:
  vhost-defaults.cfg: |-
    enabled = true

    mapping.localhost.host = localhost
    mapping.localhost.source = /
    mapping.localhost.target = /
    mapping.localhost.idProvider.system = default
